<resources>
    <string name="app_name">HideMyVideo</string>
    <string name="forget_password">Forget Password?</string>
    <string name="add">Add</string>
    <string name="show_info">Enter your nickname for password recovery</string>
    <string name="hint">Enter your nickname</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="news">Enter New Password</string>
    <string name="confirm">Confirm New Password</string>
    <string name="confirm_btn">Confirm</string>
    <string name="enter_your_nickname_start_you_added">Enter your nickname start you added</string>
    <string name="_0">0</string>
</resources>