<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AuthenticationActivity">
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/add_recovery_phase_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:fontFamily="@font/roboto"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_info"/>
        <EditText
            android:fontFamily="@font/roboto"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="180dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:maxLines="1"
            android:id="@+id/recovery_phase"/>
        <Button
            android:fontFamily="@font/roboto"
            android:layout_below="@+id/recovery_phase"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_btn"
            android:maxLines="1"
            android:id="@+id/confirm_button"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/input_password_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:fontFamily="@font/roboto"
        android:textSize="17sp"
        android:textStyle="bold"
        android:id="@+id/show_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        />

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:orientation="horizontal">

        <EditText
            android:hint="@string/_0"
            android:id="@+id/editText1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center" />
        <EditText
            android:hint="@string/_0"
            android:id="@+id/editText2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/_0"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center" />

        <EditText
            android:hint="@string/_0"
            android:id="@+id/editText4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"

            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
        />
    </LinearLayout>

    <TextView
        android:fontFamily="@font/roboto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/forget_password"
        android:id="@+id/forgot_password"/>
    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/recovery_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:fontFamily="@font/roboto"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"/>
        <EditText
            android:fontFamily="@font/roboto"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="180dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_nickname_start_you_added"
            android:maxLines="1"
            android:id="@+id/add_recovery_phase"/>
        <Button
            android:fontFamily="@font/roboto"
            android:layout_below="@+id/add_recovery_phase"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_btn"
            android:maxLines="1"
            android:id="@+id/get_recovery_confirm_button"/>
    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/add_new_password_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:fontFamily="@font/roboto"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter Your new password"/>
        <EditText
            android:fontFamily="@font/roboto"
            android:inputType="number"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="180dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/news"
            android:maxLength="4"
            android:maxLines="1"
            android:id="@+id/new_password"
            tools:ignore="TextFields" />
        <EditText
            android:fontFamily="@font/roboto"
            android:inputType="number"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/confirm"
            android:maxLines="1"
            android:maxLength="4"
            android:layout_below="@+id/new_password"
            android:id="@+id/confirm_new_password"
            tools:ignore="TextFields"
            android:autofillHints="" />
        <Button
            android:fontFamily="@font/roboto"
            android:layout_below="@+id/confirm_new_password"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_btn"
            android:maxLines="1"
            android:id="@+id/confirm_new_password_button"/>
    </RelativeLayout>
</LinearLayout>